RESOLVED FIXED261202
REGRESSION(267279@main): media/media-source/media-source-seek-detach-crash.html causes a crash
https://bugs.webkit.org/show_bug.cgi?id=261202
Summary REGRESSION(267279@main): media/media-source/media-source-seek-detach-crash.ht...
Jean-Yves Avenard [:jya]
Reported 2023-09-06 07:26:43 PDT
I can consistently reproduce the error on my local machine. It doesn't occur with EWS for some reason. ``` stdout: stderr: ASSERTION FAILED: Completion handler should always be called !m_function /Users/jyavenard/Work/webkit/OpenSource/WebKitBuild/Debug/usr/local/include/wtf/CompletionHandler.h(65) : WTF::CompletionHandler<void (const WTF::MediaTime &)>::~CompletionHandler() 1 0x13904b568 WTFCrash 2 0x119dc226c WTF::CompletionHandler<void (WTF::MediaTime const&)>::~CompletionHandler() 3 0x119dc1238 WTF::CompletionHandler<void (WTF::MediaTime const&)>::~CompletionHandler() 4 0x119dc077c void IPC::handleMessageAsync<Messages::MediaSourcePrivateRemote::SeekToTarget, WebKit::MediaSourcePrivateRemote, WebKit::MediaSourcePrivateRemote, void (WebCore::SeekTarget const&, WTF::CompletionHandler<void (WTF::MediaTime const&)>&&)>(IPC::Connection&, IPC::Decoder&, WebKit::MediaSourcePrivateRemote*, void (WebKit::MediaSourcePrivateRemote::*)(WebCore::SeekTarget const&, WTF::CompletionHandler<void (WTF::MediaTime const&)>&&)) 5 0x119dc0538 WebKit::MediaSourcePrivateRemote::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 6 0x11cab597c IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 7 0x11bbb5a18 WebKit::GPUProcessConnection::dispatchMessage(IPC::Connection&, IPC::Decoder&) 8 0x11a6100ec WebKit::GPUProcessConnection::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 9 0x11ca89468 IPC::Connection::dispatchMessage(IPC::Decoder&) 10 0x11ca898fc IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>) 11 0x11ca89c38 IPC::Connection::dispatchOneIncomingMessage() 12 0x11caa85cc IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>)::$_17::operator()() const 13 0x11caa850c WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder>>)::$_17, void>::call() 14 0x13af95bd4 WTF::Function<void ()>::operator()() const 15 0x139115ae8 WTF::RunLoop::performWork() 16 0x13911a470 WTF::RunLoop::performWork(void*) 17 0x184837d28 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 18 0x184837cbc __CFRunLoopDoSource0 19 0x184837a2c __CFRunLoopDoSources0 20 0x18483661c __CFRunLoopRun 21 0x184835c2c CFRunLoopRunSpecific 22 0x18593e798 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 23 0x1859b7758 -[NSRunLoop(NSRunLoop) run] 24 0x18448cd64 _xpc_objc_main 25 0x18449ba08 _xpc_main 26 0x18448c910 _xpc_copy_xpcservice_dictionary 27 0x11a7d78b8 WebKit::XPCServiceMain(int, char const**) 28 0x11ca561f0 WKXPCServiceMain 29 0x102e53f9c main 30 0x1843e1058 start com.apple.WebKit.WebContent.Development terminated (pid 88764) for reason: crash LEAK: 1 WebPageProxy ```
Attachments
Radar WebKit Bug Importer
Comment 1 2023-09-06 07:26:59 PDT
Jean-Yves Avenard [:jya]
Comment 2 2023-09-06 07:59:20 PDT
EWS
Comment 3 2023-09-06 09:07:14 PDT
Committed 267675@main (f790c5f884db): <https://commits.webkit.org/267675@main> Reviewed commits have been landed. Closing PR #17482 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.