Cherry-pick f790c5f884db. rdar://115055098

REGRESSION(267279@main): media/media-source/media-source-seek-detach-crash.html causes a crash
    https://bugs.webkit.org/show_bug.cgi?id=261202
    rdar://115055098

    Reviewed by Youenn Fablet.

    Call completionHandler immediately when MediaSource is closed.

    * Source/WebCore/Modules/mediasource/MediaSource.cpp:
    (WebCore::MediaSource::seekToTarget):
    (WebCore::MediaSource::completeSeek): Fly-by fix, exit loop early when an error has occurred.

    Canonical link: https://commits.webkit.org/267675@main

Canonical link: https://commits.webkit.org/265870.561@safari-7616-branch